kos and auth service integration done..